[package]
name = "citron"
version = "0.1.0"
authors = ["Emiliano Firmino <emiliano.firmino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
sdl2 = "0.34.5"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"