[package]
name = "citron"
version = "0.1.0"
authors = ["Emiliano Firmino <emiliano.firmino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
sdl2 = "0.34.5"
bitflags = "1.2.1"
packed_struct = "0.5.0"
pretty_env_logger = "0.4"
log = { version = "0.4", features = ["std", "serde"] }